--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cuestionario de Asesoría</h1>
+        <h1>Cuestionario de Asesoría Deportiva</h1>
         <form id="questionnaire" onsubmit="return validateForm()">
             <div class="form-group">
                 <label for="name">*Nombre completo:</label>
