--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </span>
                     <p>Arrastra y suelta tu archivo o imagen aquí o haz click para seleccionar un archivo.</p>
                 </label>
-                <input class="file-input" name="text" id="file" type="file"/>
+                <input class="file-input" name="text" id="file" accept="image/*"/>
                 
                 <button type="submit">Enviar</button>
             </form>
