--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <textarea id="equipment" name="equipment"></textarea>
                 </div>
 
-                <label for="file" class="labelFile">
+                <label for="image" class="labelFile">
                     <span>
                         <svg xml:space="preserve"
                             viewBox="0 0 184.69 184.69"
@@ -132,7 +132,7 @@
                     </span>
                     <p>Arrastra y suelta tu archivo o imagen aquí o haz click para seleccionar un archivo.</p>
                 </label>
-                <input class="file-input" name="text" id="file" accept="image/*"/>
+                <input class="file-input" type="file" id="image" name="image" accept="image/*" capture="environment">
                 
                 <button type="submit">Enviar</button>
             </form>
