--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </span>
                     <p>Arrastra y suelta tu archivo o imagen aquí o haz click para seleccionar un archivo.</p>
                 </label>
-                <input class="file-input" type="file" id="image" name="image" accept="image/*" capture="environment">
+                <input class="file-input" type="file" id="image" name="image" accept="image/*" capture="camera">
                 
                 <button type="submit">Enviar</button>
             </form>
