--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
                     <p>Arrastra y suelta tu archivo o imagen aquí o haz click para seleccionar un archivo.</p>
                 </label>
                 <input class="file-input" type="file" id="image" name="image" accept="image/*" capture="camera">
+                <form id="image-upload-form">
+                    <input type="file" id="image-input" accept="image/*" capture="camera">
+                    <button id="upload-button">Upload Image</button>
+                    <div id="image-preview"></div>
+                  </form>
                 
                 <button type="submit">Enviar</button>
             </form>
