--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                     </span>
                     <p>Arrastra y suelta tu archivo o imagen aquí o haz click para seleccionar un archivo.</p>
                 </label>
-                <input class="file-input" type="file" id="image" name="image" accept="image/*" capture="camera">
+                <input class="file-input" type="file" id="image" name="image" accept="image/*">
                 <form id="image-upload-form">
-                    <input type="file" id="image-input" accept="image/*" capture="camera">
+                    <input type="file" id="image-input" accept="image/*">
                     <button id="upload-button">Upload Image</button>
                     <div id="image-preview"></div>
                   </form>
